--- a/doc 1.html
+++ b/doc 1.html
@@ -5,10 +5,12 @@
         <title>Javascript Essentials</title>
     </head>
     <body>
-        <select id="background">
-            <option value="Blue"><Blue/option>
-                <option value="Orange"><Orange/option>
-                    <option value="Brown"><Brown/option>
+        <selectname= "css" id="background">
+            <option value="Blue">Blue/option>
+                <option value="Orange"<Orange/option>
+                    <option value="Brown"<Brown/option>
         </select>
+        <select name="css"id="width">
+                        
     </body>
     </html>
