--- a/doc 1.html
+++ b/doc 1.html
@@ -11,6 +11,8 @@
                     <option value="Brown"<Brown/option>
         </select>
         <select name="css"id="width">
+            <option value="200px">200px</option>
+            <option value="400px">400px</option>
                         
     </body>
     </html>
