--- a/doc 1.html
+++ b/doc 1.html
@@ -13,6 +13,7 @@
         <select name="css"id="width">
             <option value="200px">200px</option>
             <option value="400px">400px</option>
+            <option value="600px">600px</option>
                         
     </body>
     </html>
