--- a/doc 1.html
+++ b/doc 1.html
@@ -14,6 +14,9 @@
             <option value="200px">200px</option>
             <option value="400px">400px</option>
             <option value="600px">600px</option>
+        </select>
+        <select name="css" id="height"
+                <option value="200px">200px</option>
                         
     </body>
     </html>
