--- a/doc 1.html
+++ b/doc 1.html
@@ -17,6 +17,8 @@
         </select>
         <select name="css" id="height"
                 <option value="200px">200px</option>
+                <option value="400px">400px</option>
+                <option value="600px">600px</option>
                         
     </body>
     </html>
