--- a/doc 1.html
+++ b/doc 1.html
@@ -19,6 +19,9 @@
                 <option value="200px">200px</option>
                 <option value="400px">400px</option>
                 <option value="600px">600px</option>
+    </select>
+<button id="APPLY">APPLY</button>
+
                         
     </body>
     </html>
