--- a/doc 1.html
+++ b/doc 1.html
@@ -21,7 +21,8 @@
                 <option value="600px">600px</option>
     </select>
 <button id="APPLY">APPLY</button>
-
+<br><br>
+<div id="alter"
                         
     </body>
     </html>
