--- a/doc 1.html
+++ b/doc 1.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <selectname= "css" id="background">
-            <option value="Blue">Blue/option>
-                <option value="Orange"<Orange/option>
-                    <option value="Brown"<Brown/option>
+            <option value="Blue">Blue</option>
+                <option value="Orange">Orange</option>
+                    <option value="Brown">Brown</option>
         </select>
-        <select name="css"id="width">
+        <select name="css" id="width">
             <option value="200px">200px</option>
             <option value="400px">400px</option>
             <option value="600px">600px</option>
