--- a/doc 1.html
+++ b/doc 1.html
@@ -23,8 +23,8 @@
 <button id="APPLY">APPLY</button>
 <br><br>
 <div id="alter"
-     style="width: 400px;height:400px;background:light green">
-</div>
+     style="width:400px;height:400px;background:light green"
+></div>
                         
     </body>
     </html>
