--- a/doc 1.html
+++ b/doc 1.html
@@ -23,7 +23,7 @@
 <button id="APPLY">APPLY</button>
 <br><br>
 <div id="alter"
-     style="width:400px;height:400px;background:light green"
+     style="width:400px;height:400px;background:green"
 ></div>
                         
     </body>
