--- a/doc 1.html
+++ b/doc 1.html
@@ -15,7 +15,7 @@
             <option value="400px">400px</option>
             <option value="600px">600px</option>
         </select>
-        <select name="css" id="height"
+        <select name="css" id="height">
                 <option value="200px">200px</option>
                 <option value="400px">400px</option>
                 <option value="600px">600px</option>
@@ -23,8 +23,7 @@
 <button id="APPLY">APPLY</button>
 <br><br>
 <div id="alter"
-     style="width:400px;height:400px;background:green"
-></div>
+     style="width:400px;height:400px;background:green"></div>
                         
     </body>
     </html>
