--- a/doc 1.html
+++ b/doc 1.html
@@ -24,6 +24,6 @@
 <br><br>
 <div id="alter"
      style="width:400px;height:400px;background:green"></div>
-                        
+              <script src="java1.js"></scipt>          
     </body>
     </html>
