--- a/doc 1.html
+++ b/doc 1.html
@@ -22,7 +22,7 @@
     </select>
 <button id="APPLY">APPLY</button>
 <br><br>
-<div id="alter"
+<div id="apply"
      style="width:400px;height:400px;background:green"></div>
               <script src="java1.js"></script>          
     </body>
