--- a/doc 1.html
+++ b/doc 1.html
@@ -9,11 +9,13 @@
             <option value="Blue">Blue</option>
                 <option value="Orange">Orange</option>
                     <option value="Brown">Brown</option>
+             <option value="Pink">Pink</option>
         </select>
         <select name="css" id="width">
             <option value="200px">200px</option>
             <option value="400px">400px</option>
             <option value="600px">600px</option>
+            
         </select>
         <select name="css" id="height">
                 <option value="200px">200px</option>
